implementing iterator in stack

--- a/01_iterators.ipynb
+++ b/01_iterators.ipynb
@@ -159,6 +159,50 @@
     "    # Handle the case where the iterator is already exhausted\n",
     "    print(\"Iterations Exushted\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 30, 40)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# stack.py\n",
+    "\n",
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self._items = []\n",
+    "\n",
+    "    def push(self, *item):\n",
+    "        self._items.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        try:\n",
+    "            return self._items.pop()\n",
+    "        except IndexError:\n",
+    "            raise IndexError(\"pop from an empty stack\") from None\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        # items  = list(self._items)\n",
+    "        # for item in items:\n",
+    "        #     return item\n",
+    "\n",
+    "        return iter(self._items)\n",
+    "s = Stack()\n",
+    "s.push(20,30,40)\n",
+    "iterator = s.__iter__()\n",
+    "next(iterator)"
+   ]
   }
  ],
  "metadata": {
