--- a/03_Decorators_fuc_copy_closure.ipynb
+++ b/03_Decorators_fuc_copy_closure.ipynb
@@ -40,6 +40,43 @@
     "del wellcome\n",
     "wel()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Closures\n",
+    "def main_welcom():\n",
+    "    msg = \"Wellcome\"\n",
+    "    def sub_welcome():\n",
+    "        print(\"Welcome to the advance python course\")\n",
+    "\n",
+    "    return sub_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advance python course\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcom()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
